feat: 代码初步调试,修复若干bug
