# docs/swagger.json
@@ -6,7 +6,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "task.mytool.zone",
     "basePath": "/v1",
     "paths": {
         "/notice/detail": {
@@ -23,6 +23,13 @@
                 ],
                 "summary": "获取用户通知详情",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "jwt_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "通知ID",
@@ -78,6 +85,15 @@
                     "通知"
                 ],
                 "summary": "获取用户通知列表",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "jwt_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -131,6 +147,13 @@
                 "operationId": "apply-task",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "jwt_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "taskID",
                         "name": "taskID",
@@ -176,6 +199,13 @@
                 "operationId": "audit-task",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "jwt_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "taskID",
                         "name": "taskID",
@@ -183,6 +213,10 @@
                         "required": true
                     },
                     {
+                        "enum": [
+                            "rejected",
+                            "approved"
+                        ],
                         "type": "string",
                         "description": "auditStatus",
                         "name": "auditStatus",
@@ -228,6 +262,13 @@
                 "operationId": "audit-user-task",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "jwt_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "taskID",
                         "name": "taskID",
@@ -242,6 +283,10 @@
                         "required": true
                     },
                     {
+                        "enum": [
+                            "rejected",
+                            "approved"
+                        ],
                         "type": "string",
                         "description": "auditStatus",
                         "name": "auditStatus",
@@ -287,6 +332,13 @@
                 "operationId": "cancel-task",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "jwt_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "taskID",
                         "name": "taskID",
@@ -330,11 +382,41 @@
                 ],
                 "summary": "Create task",
                 "operationId": "create-task",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "jwt_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "创建任务",
+                        "name": "jsonBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/v1.Task"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/http_util.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/http_util.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/entity.Task"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -367,6 +449,13 @@
                 "summary": "Show task detail",
                 "operationId": "detail",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "jwt_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "taskID",
@@ -425,6 +514,13 @@
                 "operationId": "finish-task",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "jwt_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "taskID",
                         "name": "taskID",
@@ -470,9 +566,33 @@
                 "operationId": "list",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "jwt_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
-                        "description": "lastId",
-                        "name": "lastId",
+                        "description": "lastID",
+                        "name": "lastID",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "torun",
+                            "audit_fail",
+                            "join",
+                            "new",
+                            "running",
+                            "paused",
+                            "finished",
+                            "canceled",
+                            "deleted"
+                        ],
+                        "type": "string",
+                        "description": "status",
+                        "name": "status",
                         "in": "query"
                     }
                 ],
@@ -529,6 +649,13 @@
                 "operationId": "pause-task",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "jwt_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "taskID",
                         "name": "taskID",
@@ -573,6 +700,13 @@
                 "summary": "Prepare task",
                 "operationId": "prepare-task",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "jwt_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "taskID",
@@ -631,6 +765,13 @@
                 "operationId": "run-log-list",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "jwt_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "taskID",
                         "name": "taskID",
@@ -639,8 +780,8 @@
                     },
                     {
                         "type": "integer",
-                        "description": "lastId",
-                        "name": "lastId",
+                        "description": "lastID",
+                        "name": "lastID",
                         "in": "query"
                     }
                 ],
@@ -697,6 +838,13 @@
                 "operationId": "sign-task",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "jwt_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "taskID",
                         "name": "taskID",
@@ -749,6 +897,13 @@
                 "operationId": "start-task",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "jwt_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "taskID",
                         "name": "taskRunID",
@@ -794,12 +949,19 @@
                 "operationId": "upload-run-log",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "jwt_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "上报任务运行日志",
                         "name": "jsonBody",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.TaskRunLog"
+                            "$ref": "#/definitions/v1.UploadRunLogRequest"
                         }
                     }
                 ],
@@ -840,6 +1002,13 @@
                 "summary": "User task list",
                 "operationId": "user-task-list",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "jwt_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "userID",
@@ -897,9 +1066,16 @@
                 "tags": [
                     "task"
                 ],
-                "summary": "User list",
-                "operationId": "user-list",
+                "summary": "Apply Task User list",
+                "operationId": "apply-user-list",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "jwt_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "taskID",
@@ -960,10 +1136,10 @@
                 "summary": "获取用户设置",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "用户ID",
-                        "name": "userID",
-                        "in": "query",
+                        "type": "string",
+                        "description": "jwt_token",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     }
                 ],
@@ -1190,6 +1366,13 @@
                 "summary": "更新用户设置",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "jwt_token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "用户设置",
                         "name": "jsonBody",
                         "in": "body",
@@ -1231,7 +1414,9 @@
                 "password_error",
                 "service_error",
                 "auth_failed",
+                "wx_auth_failed",
                 "token_not_set",
+                "repeat",
                 "token_timeout",
                 "forbidden",
                 "user_exist",
@@ -1251,7 +1436,9 @@
                 "ErrorUserPassword",
                 "ErrorServerError",
                 "ErrorAuthFailed",
+                "ErrorWxAuthFailed",
                 "ErrorTokenNotSet",
+                "ErrorRepeat",
                 "ErrorTokenTimeout",
                 "ErrorForbidden",
                 "ErrorUserExist",
@@ -1279,6 +1466,9 @@
                     "type": "integer"
                 },
                 "status": {
+                    "type": "string"
+                },
+                "title": {
                     "type": "string"
                 },
                 "user_id": {
@@ -1325,9 +1515,9 @@
                     "type": "string"
                 },
                 "duration": {
-                    "type": "string"
+                    "type": "integer"
                 },
-                "endat": {
+                "end_at": {
                     "type": "string"
                 },
                 "id": {
@@ -1394,6 +1584,9 @@
                 "education": {
                     "type": "string"
                 },
+                "email": {
+                    "type": "string"
+                },
                 "height": {
                     "type": "string"
                 },
@@ -1401,6 +1594,9 @@
                     "type": "string"
                 },
                 "job": {
+                    "type": "string"
+                },
+                "phone": {
                     "type": "string"
                 },
                 "tags": {
@@ -1460,6 +1656,46 @@
                 "error": {
                     "type": "string",
                     "example": "error message"
+                }
+            }
+        },
+        "v1.Task": {
+            "type": "object",
+            "properties": {
+                "describe": {
+                    "type": "string"
+                },
+                "location": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "require": {
+                    "type": "string"
+                }
+            }
+        },
+        "v1.UploadRunLogRequest": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "images": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "taskID": {
+                    "type": "integer"
+                },
+                "videos": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
