# internal/entity/const.go
@@ -1,13 +1,14 @@
 package entity
 
 // 定义任务的执行状态
-// 任务的执行状态有：发布、审核失败、审核通过待报名, 报名结束等待运行, 运行、暂停、完成、取消
+// 任务的执行状态有：新任务(发布待审核)、审核失败、报名(审核通过待报名), 待运行(报名结束等待运行), 运行、暂停、完成、取消
 const (
-	TaskStatusPublish   = "publish"
+	TaskStatusNew       = "new"
 	TaskStatusAuditFail = "audit_fail"
-	TaskStatusAuditPass = "audit_pass"
-	TaskStatusPending   = "pending"
-	TaskStatusRunning   = "running"
+	TaskStatusJoin      = "join"
+	TaskStatusTorun     = "torun"   // 开始报名
+	TaskStatusSign      = "sign"    // 开始报名
+	TaskStatusRunning   = "running" // 报名结束
 	TaskStatusPaused    = "paused"
 	TaskStatusFinished  = "finished"
 	TaskStatusCanceled  = "canceled"
@@ -22,8 +23,13 @@ const (
 // 用户报名任务审核状态
 const (
 	UserTaskStatusApply     = "apply"
-	UserTaskStatusAuditFail = "rejected"
-	UserTaskStatusAuditPass = "approved"
+	UserTaskStatusAuditFail = StatusAuditReject
+	UserTaskStatusAuditPass = StatusAuditApproved
+)
+
+const (
+	StatusAuditReject   = "rejected"
+	StatusAuditApproved = "approved"
 )
 
 // 用户报名在任务中角色 队长 队员 记录员 其他
